--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,6 +13,7 @@ jobs:
     runs-on: "ubuntu-latest"
     permissions:
       contents: "write"
+      pull-requests: "write"
     env:
       GH_TOKEN: "${{ github.token }}"
     steps:
@@ -57,3 +58,28 @@ jobs:
           }' > query-body.json
           
           gh api graphql --input query-body.json
+
+      - name: "Open a PR"
+        run: |
+          gh pr create \
+            --head "release/${{ inputs.version }}" \
+            --base main \
+            --title "Release ${{ inputs.version }}" \
+            --body "Please pull these awesome changes in!" \
+
+#          gh api "/repos/$GITHUB_REPOSITORY/git/refs" \
+#            --method POST \
+#            --header "Accept: application/vnd.github+json" \
+#            --header "X-GitHub-Api-Version: 2022-11-28" \
+#            --raw-field "ref=refs/heads/release/${{ inputs.version }}" \
+#            --raw-field "sha=$GITHUB_SHA"
+
+#          gh api /repos/$GITHUB_REPOSITORY/pulls \
+#            --method POST \
+#            --header "Accept: application/vnd.github+json" \
+#            --header "X-GitHub-Api-Version: 2022-11-28" \
+#            --raw-field "title=Release ${{ inputs.version }}" \
+#            --raw-field "body=Please pull these awesome changes in!" \
+#            --raw-field "head=release/${{ inputs.version }}"
+#            --raw-field "base=main"
+
