Try `workflow_run` instead of `workflow_dispatch`

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,5 +1,10 @@
 on:
   workflow_dispatch: null
+  workflow_run:
+    workflows:
+      - "Updates"
+    types:
+      - completed
   pull_request: null
 
 
