--- a/.github/workflows/updates.yaml
+++ b/.github/workflows/updates.yaml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         include:
           - tox-label-create-changes: "update"
-            run-workflow: "test.yaml"
+#            run-workflow: "test.yaml"
 
     uses: "kurtmckee/github-workflows/.github/workflows/create-pr.yaml@dispatch-after-opening-pr"
     with:
