--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,8 +5,12 @@ on:
       - "✨ Updates"
     types:
       - completed
-  pull_request: null
-
+  pull_request:
+    types:
+      - "opened"
+      - "reopened"
+      - "synchronized"
+      - "ready_for_review"
 
 jobs:
   test:
